# camera_occlusion

./: README.md  pyproject.toml  requirements.txt  train_model.py
.github/workflows/: publish.yml
camera_occlusion/: __init__.py  camera_noise.py
examples/: run_gallery.py
